# epguides-api

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .frigg.yml  .gitignore  .gitleaks.toml  .osv-scanner.toml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .trivyignore  .trivyignore.image  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  defaults.cfg  docker-compose.prod.yml  docker-compose.yml  encoders.py  epguides.py  healthcheck.py  logging.conf  mkdocs.yml  models.py  pyproject.toml  pyrightconfig.json  requirements-prod.txt  requirements.txt  run.py  setup.cfg  setup.py  tests.py  tox.ini  utils.py  verify_llm.py  (+3 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/scripts/: auto_organize.py
.github/workflows/: auto-organize.yml  ci-cutover-proof.yml  ci.yml  dependabot-auto-merge.yml  hadolint.yml  release.yml  trivy-fs-nightly.yml  uv-lock-refresh.yml
api/: app.py  exceptions.py  metrics.py  models.py  tests.py  utils.py  views.py
api/api/: __init__.py
api/static/js/: app.js
api/templates/: index.html
app/: __init__.py  contract.py  exceptions.py  main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  mcp.py  shows.py
app/core/: cache.py  config.py  constants.py  logging_config.py  metrics.py  middleware.py  observability.py
app/mcp/: __init__.py  server.py
app/models/: mcp_schemas.py  responses.py  schemas.py
app/services/: epguides.py  llm_service.py  show_service.py
app/tests/: conftest.py  test_api_contract.py  test_base_image_digest_pin.py  test_cache.py  test_ci_parity_contract.py  test_compose_publish_pin.py  test_core_utilities.py  test_e2e.py  test_endpoints.py  test_epguides_helpers.py  test_error_responses.py  test_host_interpreter_compat.py  test_llm_service.py  test_main_app.py  test_mcp.py  test_mcp_endpoints.py  test_metrics.py  test_middleware_logging.py  test_observability.py  test_osv_audit_contract.py  test_performance.py  test_schemas.py  test_services.py  test_uv_lock_refresh_workflow.py
asgard_observability/: README.md  VENDORED.md  __init__.py  _before_send.py  _logging.py  _setup.py  pyproject.toml
asgard_observability/tests/: test_observability.py
docs/: configuration.md  development.md  getting-started.md  index.md  mcp-server.md  mkdocs.yml  requirements.txt  rest-api.md
old_api/: models.py  tests.py  utils.py
scripts/: audit_osv.sh  check-no-internal-refs.sh  check_asgard_observability_drift.py  check_base_image_digest_pin_drift.py  check_no_external_llm.py  check_no_private_git_deps.py  check_stream_choices_guard.py
tests/: test_views.py  tests.py
