[project]
name = "epguides-api"
version = "1.0.0"
description = "REST API for TV show metadata, episodes, and air dates"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Fredrik Carlsen", email = "frecar@carlsen.io"}]
keywords = ["tv", "shows", "api", "epguides", "fastapi"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function calls in argument defaults (FastAPI Depends)
    "UP046", # Generic subclass vs type params (Pydantic compat)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
