[project]
name = "epguides-api"
version = "1.2.0"
description = "REST API for TV show metadata, episodes, and air dates"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Fredrik Carlsen", email = "fredrik@carlsen.io"}]
keywords = ["tv", "shows", "api", "epguides", "fastapi"]

# Pinned exact versions matching the previous requirements.txt floor.
# uv.lock pins transitives. Bump deliberately, not via floating ranges.
dependencies = [
    "fastapi==0.137.0",
    "uvicorn[standard]==0.49.0",
    "redis==8.0.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
    "prometheus-client==0.25.0",
    "sentry-sdk==2.62.0",  # optional — only active when SENTRY_DSN is set
    "orjson==3.11.9",
    "setuptools==82.0.1",  # keep setuptools current — security floor for transitives
    "msgpack>=1.2.1",
]

[dependency-groups]
# Dev tools — pulled in by `uv sync` (default) but excluded by
# `uv sync --no-dev` (which the production Dockerfile uses).
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.17",
    "pre-commit==4.6.0",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    # Drives the in-process OpenAPI route-contract gate (app/contract.py +
    # app/tests/test_api_contract.py) — test-only, never imported at runtime.
    "jsonschema==4.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py314"

# Host-interpreter carve-back. Everything under scripts/ is invoked by the
# system `python3` (a developer's machine / CI runner, which may be older than
# 3.14) via the `language: system` pre-commit hooks
# (`python3 scripts/check_no_external_llm.py`) and `make ci`/`ci-parity`
# targets — NOT the 3.14 `uv` venv the app itself runs in. With the
# project-wide `target-version = "py314"`, a global `ruff format` will happily
# REWRITE `except (A, B):` into PEP 758 unparenthesized `except A, B:` (valid
# only on Python 3.14+), which then SyntaxErrors the moment the script is run
# on a system interpreter older than 3.14. Pin those files to py312 (the
# minimum interpreter the host-run scripts must stay parseable under) so the
# linter+formatter never introduces 3.14-only syntax there. The real
# CPython-3.12 `py_compile` guard (CI + pre-commit + make ci-parity) is the
# authoritative backstop; this is the fast lint+format layer.
[tool.ruff.per-file-target-version]
"scripts/*.py" = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DTZ",    # flake8-datetimez — flag naive datetime usage (#590)
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function calls in argument defaults (FastAPI Depends)
    "UP046", # Generic subclass vs type params (Pydantic compat)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/tests/*" = ["S101", "DTZ"]  # allow assert + literal datetimes in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-q --tb=short"
# Flat-layout repo (app/ at root, no src/) — `uv run pytest` doesn't add
# the cwd to sys.path the way `python -m pytest` does. Without this,
# `from app.x import y` fails to import in test discovery.
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "@overload",
    "class .*\\bProtocol\\):",
    "assert_never\\(",
]
exclude_also = [
    "def __repr__",
    "def __str__",
]
fail_under = 95
show_missing = true
skip_covered = false
precision = 1

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[[tool.mypy.overrides]]
module = "app.tests.*"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "no-untyped-def"]
