[project]
name = "asgard-observability"
version = "0.1.0"
description = "Shared cluster observability: Sentry init and JSON logging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentry-sdk>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "asgard_observability"
